MyFaces Release Notes
=====================

----------------------------------------------------------------------
Changes in Release 1.0.1 alpha
* x-checked various Renderers for Specs (tlddoc) compliance
* serious bug in UIData fixed
* server state saving bug fixed
* new DataList component (dynamical List based on UIData - see examples webapp)
* <f:convertNumber> threw NPE - fixed
* HiddenRenderer fixed
* many small bugfixes

----------------------------------------------------------------------
Changes in Release 1.0.0 alpha
* MyFaces has it's own JSF-API Implementation now!
  (Sun's jsf-api.jar will no longer be needed)
* Sun's JSF-RI samples (cardemo, guessNumber) now run with MyFaces!
  (see Documentation on http://myfaces.sourceforge.net)
* all core tags implemented now
* new Calendar component (see examples webapp)  
* Bugfixes

----------------------------------------------------------------------
Changes in Release 0.9.1
* Many, many changes to catch up with final Spec. 1.0

----------------------------------------------------------------------
Changes in Release 0.9.0
* Many, many changes to catch up with current Spec. 1.0 Proposed Final Draft
* Some config parameters abandoned (see migration-0.4-to-0.9.txt)
* new config parameter "myfaces_allow_javascript" (see /conf/web.xml for description)
* new config parameter "myfaces_pretty_html" (see /conf/web.xml for description)

----------------------------------------------------------------------
Changes in Release 0.4.4
* added "rendererType" attribute to tag library for all components.
* added RadioRenderer & selectone_radio tag (see carconfigurator example)
* new hack to make MyFaces more compatible (tags that extend UIComponentTag
  directly should work better)
* replaced the proprietary logging by jakarta commons logging
* convert/impl/DateConverter now parses with the "formatPattern" of the component
  if all other parsing attempts fail
* hyperlink-attributes where added to sortcolumn
