@@ -67,7 +67,7 @@
 
     <target name="release"
             depends="compile-and-copy-libs"
-            description="creates the examples release file myfaces-x.x.x-examples.tar.gz (don't forget to adjust manifest.properties!)">
+            description="creates the examples release file myfaces-x.x.x-examples.tgz (don't forget to adjust manifest.properties!)">
 
         <mkdir dir="${temp.dir}"/>
 
@@ -87,7 +87,13 @@
         <war destfile="${temp.dir}/myfaces-examples.war"
              webxml="${project.dir}/conf/web.xml"
              manifest="${temp.dir}/MANIFEST.MF">
-            <lib dir="${project.dir}/lib" excludes="jsp-api.jar, servlet-api.jar" />
+            <lib file="${commons-el.jar}"/>
+            <lib file="${commons-logging.jar}"/>
+            <lib file="${cos.jar}"/>
+            <lib file="${jsp-api.jar}"/>
+            <lib file="${jstl.jar}"/>
+            <lib file="${myfaces.jar}"/>
+            <lib file="${log4j.jar}"/>
             <classes dir="${web-inf.classes.dir}" />
             <fileset dir="${examples.web}"
                      excludes="WEB-INF/classes/**,
@@ -95,7 +101,7 @@
                                WEB-INF/web.xml " />
         </war>
 
-        <tar destfile="${project.dir}/myfaces-${manifest.impl.version}-examples.tar.gz"
+        <tar destfile="${project.dir}/myfaces-${manifest.impl.version}-examples.tgz"
              compression="gzip">
             <tarfileset dir="${myfaces.doc}"
                         excludes="javadoc/**/*
@@ -119,7 +125,7 @@
         <delete quiet="true" failonerror="false" includeEmptyDirs="true">
             <fileset dir="${web-inf.classes.dir}"/>
             <fileset dir="${web-inf.lib.dir}"/>
-            <fileset file="${project.dir}/myfaces-*-examples.tar.gz"/>
+            <fileset file="${project.dir}/myfaces-*-examples.tgz"/>
             <fileset file="${examples.web}/WEB-INF/web.xml"/>
             <fileset file="${examples.web}/WEB-INF/faces-config.xml"/>
             <fileset file="${temp.dir}/myfaces-samples.war" />
