@@ -1,45 +1,35 @@
-<h1>MyFaces Features
+<h1>MyFaces Components and Features
 </h1><h3>What is it, that makes MyFaces different?
 </h3>
-<br/><div class="titlebar">Saving model state information in the client response</div>Traditional JSP Applications save their state information within HttpSession objects. This is an easy to use but poor approach:
+<br/><hr/><b>Navigation component</b> <i> - convenient navigation menu</i>
+<br/>This component renders a vertical navigation menu.
+<br/><a title="no description" href='tiki-index.php?page=PanelNavigation' class='wiki'>learn more...</a>
+<br/><hr/><b>Calendar component</b> <i>with localisation support</i>
+<br/>A (not yet ;) sophisticated calendar component with localisation support.
 
-<br/><ul><li> HttpSession objects must have an expiration date (timeout) that prevents the server from running out of memory over the time. The always boring question for web admins: How long should I set the session timout?
-</li><li> Server restarting is a thrilling task: Will all objects in active sessions be serialized and restored successfully? If implementation classes have changed in the meantime, this task is likely to fail.
-</li><li> Running multiple redundant servers is a challenge. You must use cluster environments which are expensive and difficult to handle.
-</li></ul>
-<br/>MyFaces has a different approach. It makes it possible to write sophisticated applications without any use of the HttpSession. All state information of the current jsf view and (optionally) the model beans can be encoded to the client response either in the form of hidden form inputs or as query parameters in hyperlinks.
-<br/>
-<br/>MyFaces introduces a new Component &quot;UISaveState&quot; with the corresponding Tag &quot;&lt;x:save_state&gt;&quot;.
-<br/>Example (see &quot;sample1.jsp&quot; of the &quot;examples&quot; web application):
+<br/><a title="no description" href='tiki-index.php?page=InputCalendar' class='wiki'>learn more...</a>
+<br/><hr/><b>File Upload component</b>
+<br/>Convenient component for uploading files.
+<br/><a title="no description" href='tiki-index.php?page=InputFileUpload' class='wiki'>learn more...</a>
+<br/><hr/><b>UISaveState component</b> <i> - saving model state in the client response</i>
+<br/>Traditional JSP/Servlet applications save their state information within HttpSession objects. This is an easy to use but not always satisfying approach. <a title="no description" href='tiki-index.php?page=UISaveState' class='wiki'>learn more...</a>
+<br/><hr/><b>SortHeader component</b> <i>- clickable list column header with sort direction arrow</i>
 
-<br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save1&quot;&nbsp;value=&quot;#{calcForm.number1}&quot;&nbsp;/&gt;
-</font><br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save2&quot;&nbsp;value=&quot;#{calcForm.number2}&quot;&nbsp;/&gt;
-</font><br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;save3&quot;&nbsp;value=&quot;#{ucaseForm.text}&quot;&nbsp;/&gt;
+<br/>Convenient support for writing lists, that can be (re)sorted by a click on a column header.
+<br/><a title="no description" href='tiki-index.php?page=SortHeader' class='wiki'>learn more...</a>
+<br/><hr/><b>Extended DataTable component</b> <i>- list sort support and preserve DataModel option</i>
+<br/>Extends the standard &lt;h:dataTable&gt; by support for sorting (see SortHeader) and an option to save the DataModel state.
+<br/>To avoid unwanted sideeffects when having a DataModel backed by a database result, state of such a DataModel sometimes must be saved.
+<br/><a title="no description" href='tiki-index.php?page=ExtDataTable' class='wiki'>learn more...</a>
+<br/><hr/><b>Layout component</b> <i>- dynamic page layout control</i>
 
-</font><br/>The current values of the three properties number1, number2 and text are automatically saved within the client response and get restored at the next client request.
-<br/>
-<br/>You can also save the whole bean.
-<br/>Example:
-<br/><font face="courier" size="2">&nbsp;&lt;x:save_state&nbsp;id=&quot;saveCalcForm&quot;&nbsp;value=&quot;#{calcForm}&quot;&nbsp;/&gt;
-</font><br/>The whole bean automatically is saved and restored by MyFaces.
-<br/>To be able to save and restore the value of a bean property or the bean itself, it must implement the Serializable interface.
-<br/>
-<br/><div class="titlebar">Navigation Menu (HtmlPanelNavigation component and HtmlNavigationRenderer)</div>A simple navigation component to build a vertical menu structure.
-<br/>(see web\example\inc\navigation.jsp for an example)
-
-<br/>
-<br/><div class="titlebar">CommandSortHeader Component</div>Convenient support for writing lists, that can be (re)sorted by a click on a column header.
-<br/>(see web\example\simpleSortList.jsp for an example)
-<br/><a title="no description" href='tiki-index.php?page=CommandSortHeader' class='wiki'>learn more...</a>
-<br/>
-<br/><div class="titlebar">Page layout control (HtmlLayoutRenderer)</div>Support for switchable page layout. Try the example and change the layout under &quot;Options&quot; to see the magic!
-<br/>
-<br/><div class="titlebar">File upload component (HtmlFileUploadRenderer)</div>Convenient component for uploading files to web applications.
-<br/>
-<br/><div class="titlebar">Tabbed pane renderer (HtmlTabbedPaneRenderer)</div>A swing like tabbed pane renderer.
-
+<br/>Support for switchable page layout.
+<br/>Try the example and change the layout under &quot;Options&quot; to see the magic!
+<br/><hr/><b>TabbedPane component</b>
+<br/>A swing like tabbed pane renderer.
 <br/>(see web\example\tabbedPane.jsp)
-<br/>
-<br/><div class="titlebar">Extended DataTable Component with support to save DataModel state</div>To avoid unwanted sideeffects when having a DataModel backed by a database result, state of such a DataModel must be saved.
-<br/><a title="no description" href='tiki-index.php?page=MyFacesDataTable' class='wiki'>learn more...</a>
+<br/><hr/><b>DataList component</b>
+<br/>A UIData based list that can be used do simple iteration over a group of components or to render a HTML &lt;ul&gt; or &lt;ol&gt; list.
+
+<br/><hr/>
 <br/><br/>
