@@ -3,12 +3,14 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.1 alpha
+* new DataList component (dynamical List based on UIData - see examples webapp)
+* new (speadsheet like) editable table example (see master/detail example in examples webapp) 
 * x-checked various Renderers for Specs (tlddoc) compliance
 * serious bug in UIData fixed
 * server state saving bug fixed
-* new DataList component (dynamical List based on UIData - see examples webapp)
 * <f:convertNumber> threw NPE - fixed
 * HiddenRenderer fixed
+* <x:panelTabbedPane> now supports dynamic jsp includes and <f:subview>
 * many small bugfixes
 
 ----------------------------------------------------------------------
